force-twisticonics/main/default/objects/ICX_Order_Search_Field__mdt/ICX_Order_Search_Field__mdt.object-meta.xml
<CustomObject>
    <label>ICX Order Search Field</label>
    <pluralLabel>ICX Order Search Fields</pluralLabel>
</CustomObject>