force-twisticonics/main/default/objects/ICX_Order_Search_Field__mdt/fields/ICX_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>ICX_Object_Field__c</fullName>
    <label>ICX Object Field</label>
    <referenceTo>ICX_Object_Field__mdt</referenceTo>
    <relationshipLabel>ICX Order Search Fields</relationshipLabel>
    <relationshipName>ICX_Order_Search_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>