force-twisticonics/main/default/objects/ICX_Order_Search_Field__mdt/fields/ICX_Object_Field_Target__c.field-meta.xml
<CustomField>
    <fullName>ICX_Object_Field_Target__c</fullName>
    <label>ICX Object Field Target</label>
    <referenceTo>ICX_Object_Field__mdt</referenceTo>
    <relationshipLabel>ICX Order Search Fields (ICX Object Field Target)</relationshipLabel>
    <relationshipName>ICX_Order_Search_Fields_Target</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>