force-twisticonics/main/default/objects/ICX_Order_Search_Field__mdt/fields/ICX_Order_Search_Listener__c.field-meta.xml
<CustomField>
    <fullName>ICX_Order_Search_Listener__c</fullName>
    <label>ICX Order Search  Listener</label>
    <referenceTo>ICX_Order_Search_Listener__mdt</referenceTo>
    <relationshipLabel>ICX Order Search Fields</relationshipLabel>
    <relationshipName>ICX_Order_Search_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>