force-twisticonics/main/default/objects/ICX_Order_Search_Field__mdt/fields/Relationship_in_listened_Object__c.field-meta.xml
<CustomField>
    <fullName>Relationship_in_listened_Object__c</fullName>
    <label>Relationship in listened Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OrderShipping__r</fullName>
            </value>
            <value>
                <fullName>Order__r</fullName>
            </value>
            <value>
                <fullName>Order__r.account__r</fullName>
            </value>
            <value>
                <fullName>ProductReferential__r</fullName>
            </value>
            <value>
                <fullName>Order__r.OwnerId__r</fullName>
            </value>
            <value>
                <fullName>Order__r.Store__r</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>