force-twisticonics/main/default/objects/ICX_Order_Search_Field__mdt/listViews/icxordersearchfield_all.listView-meta.xml
<ListView>
    <fullName>icxordersearchfield_all</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ICX_Order_Search_Listener__c</columns>
    <columns>ICX_Object_Field__c</columns>
    <columns>ICX_Object_Field_Target__c</columns>
    <columns>Relationship_in_listened_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>